build: add commit changes

--- a/.github/workflows/bump.yaml
+++ b/.github/workflows/bump.yaml
@@ -67,7 +67,10 @@ jobs:
           docker buildx build --push --platform linux/arm/v7,linux/arm64/v8,linux/amd64 --tag "ghcr.io/reddec/auto-restic:$(git describe --tags)" .
 
       - name: Update tag if changed
-        run: git push --tags
+        run: |
+          git add -A
+          git commit -m "bump restic to $(git describe --tags)"
+          git push --tags
         if: steps.bump.outcome == 'success'
 
       - name: Create release
