--- a/.github/workflows/bump.yaml
+++ b/.github/workflows/bump.yaml
@@ -68,6 +68,8 @@ jobs:
 
       - name: Update tag if changed
         run: |
+          git config --global user.email "${{github.actor}}@users.noreply.github.com"
+          git config --global user.name "${{github.actor}}"
           git add -A
           git commit -m "bump restic to $(git describe --tags)"
           git push --tags
