--- a/.github/workflows/bump.yaml
+++ b/.github/workflows/bump.yaml
@@ -72,7 +72,8 @@ jobs:
           git config --global user.name "${{github.actor}}"
           git add -A
           git commit -m "bump restic to $(git describe --tags)"
-          git push --tags
+          git push origin master
+          git push origin --tags
         if: steps.bump.outcome == 'success'
 
       - name: Create release
