--- a/.github/workflows/update.yaml
+++ b/.github/workflows/update.yaml
@@ -9,7 +9,7 @@ env:
 
 jobs:
   build:
-    name: Bump version and test
+    name: Bump version and test on tag
     runs-on: ubuntu-latest
     steps:
       - name: Log in to the Container registry
